Add "Action Code" viewer to the options page so you can see what code is about to be executed.

--- a/ProcessAdminActions.css
+++ b/ProcessAdminActions.css
@@ -35,3 +35,14 @@ table.AdminDataList.adminactions td:nth-child(4), table.AdminDataList.adminactio
 .adminActionsAuthor {
     font-size: 13px;
 }
+
+
+#actionCodeViewer {
+    height:500px;
+    margin: 0;
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
