--- a/ProcessAdminActions.css
+++ b/ProcessAdminActions.css
@@ -1,3 +1,7 @@
+.Inputfields .InputfieldMarkup .InputfieldContent {
+    margin-top: 0 !important;
+}
+
 table.AdminDataList.adminactions td:first-child, table.AdminDataList.adminactions th:first-child {
     width: 20% !important;
 }
@@ -49,8 +53,14 @@ table.AdminDataList.adminactions td:nth-child(4), table.AdminDataList.adminactio
 
 /* Config settings styles */
 
+table.AdminDataList.adminactionsconfig tr.newAction, .AdminDataTable tr.newAction td:first-child {
+    background: #FF9933;
+    color: #FFFFFF !important;
+}
+
 table.AdminDataList.adminactionsconfig td:first-child, table.AdminDataList.adminactionsconfig th:first-child {
     width: 20% !important;
+    padding-left: 5px;
 }
 
 table.AdminDataList.adminactionsconfig td:nth-child(2), table.AdminDataList.adminactionsconfig th:nth-child(2) {
