Check for form errors before executing action. Better checking for existence of action author links. Fix support/settings link issue in default theme.

--- a/ProcessAdminActions.css
+++ b/ProcessAdminActions.css
@@ -1,3 +1,10 @@
+div#links {
+    width: 100%;
+    display: table;
+    text-align: right;
+    height: 65px;
+}
+
 .Inputfields .InputfieldMarkup .InputfieldContent {
     margin-top: 0 !important;
 }
